# traceLLM

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/dashboard/: __next.__PAGE__.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
backend/app/dashboard/_not-found/: __next._head.txt  __next._tree.txt  index.html  index.txt
backend/app/dashboard/analytics/: __next._full.txt  __next._tree.txt  index.html
backend/app/dashboard/failures/: __next._full.txt  __next._tree.txt  index.html
backend/app/dashboard/live-logs/: __next._head.txt  __next._tree.txt  index.html  index.txt
backend/app/dashboard/settings/: __next._tree.txt  __next.settings.txt  index.html  index.txt
backend/app/dashboard/traces/: __next._tree.txt  index.html  index.txt
backend/app/database/: __init__.py  base.py  mongodb.py  project_service.py  sqlite_backend.py  trace_service.py  utils.py
backend/app/models/: __init__.py  health.py  project.py  trace.py  trace_model.py
backend/app/routes/: __init__.py  health.py  observability.py  projects.py
backend/app/websocket/: __init__.py  socket.py
backend/examples/: agent_example.py  langchain_example.py  openai_example.py  openai_retry_example.py  openai_stream_example.py  rag_example.py
backend/exports/: traces-20260524-050209.json  traces-20260526-121415.json  traces-20260526-123005.json  traces-20260526-124111.json  traces-20260529-010803.json  traces-20260529-014218.json  traces-20260529-024750.json  traces-20260610-231044.json
backend/sdk/: __init__.py  tracer.py
backend/tracellm/: __init__.py  banner.py  cli.py  db.py  exporter.py  mascot.py  monitor.py  palette.py  replay.py  startup.py  summary.py  themes.py  trace_stream.py  tracer.py  tree_renderer.py  utils.py
backend/tracellm/exports/: traces-20260527-050823.json
backend/tracellm/integrations/: __init__.py  langchain.py  openai.py  tool_tracer.py
frontend/: package-lock.json  (+1 more)
(+75 files in other folders)
