[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tracellm-cli"
version = "0.1.0"
description = "TraceLLM — Open-source LLM observability, tracing, and replay infrastructure."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "typer",
    "rich",
    "motor",
    "pymongo",
    "python-dotenv",
    "openai",
    "langchain-core",
    "httpx",
]

[project.scripts]
tracellm = "tracellm.cli:main"

[tool.setuptools]
packages = [
    "tracellm",
    "tracellm.integrations",
    "sdk",
    "app",
    "app.database",
    "app.models",
    "app.routes",
    "app.websocket",
]
